--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	},
 	"dependencies": {
 		"core-js": "^3.6.5",
+		"numeral": "^2.0.6",
 		"tailwindcss": "^1.8.11",
 		"vue": "^2.6.11",
 		"vue-router": "^3.4.5"
